# hffix

./: .gitignore  .travis.yml  Makefile  README.md  default.nix  flake.nix  shell.nix
.github/workflows/: ci.yml
doc/: Doxyfile  hffix.css  hffix.style.css  hffix_footer.html
fixspec/FIXRepository/Basic/: Fields.xml  Messages.xml
fixspec/fix.4.3/: fixml4.3v20020920.dtd
fixspec/fix.4.4/: FIXML4.4v20030618.dtd
fixspec/fix.5.0.sp2/fixmlschema/: fixml-fields-base-5-0-SP2.xsd
fixspec/spec-parse-fields/: LICENSE  README.md  flake.nix  spec-parse-fields.cabal  stack.yaml
fixspec/spec-parse-fields/src/: Main.hs
fixspec/spec-parse-fields/src/Data/XML/DTD/: README.txt  Types.hs
include/: hffix.hpp  hffix_fields.hpp  hffix_tag.hpp
spec/: codegen
spec/spec-parse-fields/: README.md
spec/spec-parse-fields/src/Data/XML/DTD/: Parse.hs  license.txt
test/expected/: reader02.txt  writer01.fix  writer02.fix
test/src/: reader01.cpp  reader02.cpp  unit_tests.cpp  writer01.cpp  writer02.cpp
util/src/: fixprint.cpp
